[package]
name = "grease"
version = "0.1.0"
authors = ["Kent Fredric <kentnl@gentoo.org>"]
edition = "2018"

[dependencies]
regex = "~1.1"

[dependencies.clap]
version = "~2.32"
default-features = false

features = ["suggestions", "color", "vec_map"]

[dependencies.once_cell]
version = "~0.1"
default-features = false

features = []

[dev-dependencies]
criterion = "~0.2, >=0.2.10"

[profile.release]
lto = true
opt-level = 'z'

[[bin]]
name = "grease-bin"
path = "src/bin/grease.rs"
doc = true

[[bin]]
name = "grease-util"
path = "src/bin/grease-util.rs"
doc = true

[lib]
name = "grease"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["rlib"]

[[bench]]
name = "my_benchmark"
harness = false
